# tasks-for-rabbitmq

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
tasks_for_rabbitmq/: __init__.py  generate.py  receive.py  send.py
tasks_for_rabbitmq/scripts/: consumer.py  file_generation.py  publisher.py
