[tool.poetry]
name = "tasks-for-rabbitmq"
version = "0.1.0"
description = ""
authors = ["KsyushaKI <oksanaakadem39@gmail.com>"]
readme = "README.md"
packages = [{include = "tasks_for_rabbitmq"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
interruptingcow = "^0.8"
rabbitmq = "^0.2.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
consumer = "tasks_for_rabbitmq.scripts.consumer:main"
publisher = "tasks_for_rabbitmq.scripts.publisher:main"
file_generation = "tasks_for_rabbitmq.scripts.file_generation:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
